# sandanalyze

./: .gitignore  CLAUDE.md  README.md  app.py  auto_annotate.py  crop_images.py  eval_traditional.py  main.py  pyproject.toml  requirements.txt  run_adaptive_test.py  run_multi_feature_test.py  run_post_filter_comparison.py  sandanalyze.spec  train_cnn.py  train_yolo.py
.claude/: settings.json
.github/workflows/: README.md  build.yml  ci.yml
core/: __init__.py  batch.py  classifier.py  cnn_enhancer.py  detector.py  exporter.py  feature_filter.py  model_manager.py  morphological_splitter.py  morphology.py  multiscale_detector.py  pipeline.py  pipeline_debugger.py  preprocessor.py  report.py  shadow_enhancer.py  texture_edge_filter.py  traditional.py  yolo_detector.py
docs/: design_v2.md
docs/superpowers/plans/: 2025-06-18-v6-detection-pipeline.md  2025-06-19-multiscale-grain-detection.md  2025-06-19-tech-debt-cleanup.md  2025-06-22-texture-edge-filtering-plan.md  2025-06-23-unified-pipeline-debug-skill.md  2026-06-16-sand-morphology-analysis.md  2026-06-17-sandanalyze-v2.md  (+2 more)
gui/: __init__.py  app.py  image_panel.py  result_panel.py  settings_panel.py
scripts/: build.bat  build.sh  run_large_scale_test.py
tests/: conftest.py  test_batch.py  test_classifier.py  test_detector.py  test_exporter.py  test_feature_filter.py  test_integration.py  test_morphological_splitter.py  test_morphology.py  test_multiscale_detector.py  test_pipeline.py  test_pipeline_debugger.py  test_preprocessor.py  test_report.py  test_shadow_enhancer.py  test_texture_edge_filter.py  test_traditional.py  test_yolo_detector.py
tools/: debug_skill.py
ui/: __init__.py  charts.py
(+6 files in other folders)
