[project]
name = "sandanalyze"
version = "0.1.0"
description = "沙粒形态分析系统 - 基于OpenCV和YOLO的沙粒识别与统计"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "streamlit>=1.32",
    "plotly>=5.18",
    "kaleido>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
sandanalyze = "main:main"
