[project]
name = "sandanalyze"
version = "0.2.0"
description = "Sand grain morphology analysis system - Traditional CV-based grain detection and classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "ultralytics>=8.0",
    "streamlit>=1.32",
    "plotly>=5.18",
    "kaleido>=1.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "anthropic>=0.109.2",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]
texture = [
    "scikit-image>=0.22",
]

[project.scripts]
sandanalyze = "main:main"
